# sasktran2

./: .buildinfo  .clang-format  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CMakeLists.txt  Cargo.toml  README.md  api_reference.html  changelog.html  genindex.html  index.html  installation.html  license.md  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  required_components.html  search.html  searchindex.js  setup.py  users_guide.html  weighting_functions.html
_sources/: index.md  (+2 more)
cpp/: CMakeLists.txt
cpp/c_api/: CMakeLists.txt  atmosphere.cpp  brdf.cpp  config.cpp  deriv_mapping.cpp  engine.cpp  geodetic.cpp  geometry.cpp  output.cpp  sk_lapack.cpp  testing.cpp  viewing_geometry.cpp
cpp/cmake/: sasktran2Config.cmake
cpp/include/: sasktran2.h
cpp/include/c_api/: atmosphere.h  brdf.h  config.h  deriv_mapping.h  engine.h  geodetic.h  geometry.h  internal_types.h  output.h  sasktran2.h  sk_lapack.h  testing.h  viewing_geometry.h
cpp/include/sasktran2/: config.h  derivative_mapping.h  do_source.h  dual.h  emission_source.h  engine.h  geometry.h  grids.h  internal_common.h  output.h  raytracing.h  raytracing_rust_bridge.h  refraction.h  rust.h  sensor.h  solartransmission.h  source_algorithms.h  source_integrator.h  source_interface.h  types.h  viewinggeometry.h  viewinggeometry_internal.h  wavelength_batch.h  wavelength_block.h
cpp/include/sasktran2/atmosphere/: atmosphere.h  constituent.h  grid_storage.h  surface.h
cpp/include/sasktran2/hr/: diffuse_point.h  diffuse_source.h
cpp/include/sasktran2/math/: custom_faddeeva.h  geodetic.h  scattering.h  spectroscopy.h  trig.h  unitsphere.h  wigner.h
cpp/include/sasktran2/mie/: linearized_mie.h  mie.h
cpp/include/sasktran2/testing/: lto.h
cpp/include/sasktran2/validation/: validation.h
cpp/include/sktran_disco/: sktran_do.h  sktran_do_geometrylayerarray.h  sktran_do_layerarray.h  sktran_do_linalg.h  sktran_do_lpproduct.h  sktran_do_memory.h  sktran_do_opticallayer.h  sktran_do_polarization_types.h  sktran_do_postprocessing.h  sktran_do_properties.h  sktran_do_quadrature.h  sktran_do_rte.h  sktran_do_surface.h  sktran_do_types.h
cpp/include/sktran_disco/twostream/: backprop.h  meta.h  rust_source.h  solutions.h  source.h  storage.h  twostream.h
cpp/lib/: CMakeLists.txt
cpp/lib/atmosphere/: atmosphere.cpp
cpp/lib/config/: config.cpp
cpp/lib/derivative_mapping/: derivative_mapping.cpp
cpp/lib/dual/: dual.cpp
cpp/lib/emission/: emission_source.cpp
cpp/lib/engine/: engine.cpp
cpp/lib/geometry/: geodetic.cpp  geometry.cpp  geometry1d.cpp  geometry2d.cpp
cpp/lib/grids/: altitude_sza_source_location_interpolator.cpp  grid.cpp  source_location_interpolator.cpp
cpp/lib/hr/: diffuse_table.cpp
cpp/lib/math/: wigner.cpp
cpp/lib/mie/: linearized_mie.cpp
cpp/lib/output/: output.cpp  outputblock.h  outputc.cpp  outputderivmapped.cpp  outputidealdense.cpp  outputlinearization.cpp  outputsensor.cpp
cpp/lib/phasefunction/: interpolator.cpp  phasehandler.cpp
cpp/lib/raytracing/: plane_parallel.cpp  refraction.cpp  rust_raytracer.cpp  spherical_shell.cpp
cpp/lib/sktran_disco/: rust_twostream_source.cpp  sktran_do_geometrylayerarray.cpp  sktran_do_layerarray.cpp  sktran_do_misc.cpp  sktran_do_opticallayer.cpp  sktran_do_pconfig.cpp  sktran_do_pentadiagonal.cpp  sktran_do_polarization_types.cpp  sktran_do_postprocessing.cpp  sktran_do_quadrature.cpp  sktran_do_rte.cpp  sktran_do_specs.cpp  sktran_do_surface.cpp  sktran_do_testing.cpp  sktran_do_types.cpp
cpp/lib/sktran_disco/source_term/: do_radiance_storage.cpp  do_source.cpp  do_source_diffuse_storage.cpp  do_source_interpolated_pp.cpp  do_source_legendrestorage.cpp  do_source_native_solution.cpp  do_source_planeparallel.cpp  scratch.cpp
cpp/lib/solar/: occultation.cpp  singlescattersource.cpp  solar_ray_table.cpp  solartransmissionexact.cpp  solartransmissiontable.cpp
cpp/lib/sourceintegrator/: sourceintegrator.cpp
cpp/lib/testing/: lto.cpp
cpp/lib/tests/: CMakeLists.txt  test_main.cpp
cpp/lib/tests/atmosphere/: surface.cpp
cpp/lib/tests/dual/: test_dual.cpp
cpp/lib/tests/engine/: test_engine_basic.cpp
cpp/lib/tests/geometry/: test_geometry.cpp  test_geometry1d.cpp  test_geometry2d.cpp
cpp/lib/tests/grids/: test_grid.cpp
cpp/lib/tests/math/: test_broadening.cpp
cpp/lib/tests/mie/: linearized_mie.cpp
cpp/lib/tests/output/: test_output_batch.cpp
cpp/lib/tests/raytracing/: test_od_weights.cpp  (+3 more)
cpp/lib/unitsphere/: lebedev.cpp  lebedev_autogen.cpp
cpp/lib/viewinggeometry/: fluxobserversolar.cpp  groundviewing.cpp  tangentaltitude.cpp  viewinggeometrycontainer.cpp
pybind11/: CMakeLists.txt  atmosphere.cpp  config.cpp  derivative_mappings.cpp  engine.cpp  viewing_geometry.cpp
python/: CMakeLists.txt  pyproject.toml  setup.py
python/conda.recipe/: meta.yaml
python/docs/source/: api_reference.rst  quickstart.rst
python/sasktran2/: __init__.py  atmosphere.py  engine.py  output.py
python/src/: coordinates.cpp  main.cpp
python/src/sasktran2/: atmosphere.py
python/tests/atmosphere/: test_scalar_construction.py
python/tests/engine/: test_basic.py
python/tests/viewing_geometry/: test_basic.py
rust/sasktran2-core/: Cargo.toml  build.rs
rust/sasktran2-core/benches/: twostream.rs
rust/sasktran2-core/src/: lib.rs
rust/sasktran2-core/tests/: twostream_cpp_oracle.cpp
rust/sasktran2-py-ext/: Cargo.toml  build.rs
rust/sasktran2-py-ext/src/: atmosphere.rs  brdf.rs  common.rs  config.rs  derivative_mapping.rs  engine.rs  geodetic.rs  geometry.rs  lib.rs  output.rs  prelude.rs  viewing_geometry.rs
rust/sasktran2-raytracer/: Cargo.toml
rust/sasktran2-raytracer/src/: lib.rs  prelude.rs  traits.rs
rust/sasktran2-rs/: Cargo.toml  build_tests.rs
rust/sasktran2-rs/src/: lib.rs  prelude.rs  threading.rs
rust/sasktran2-rs/tests/: coulson.rs  cpp.rs  cxx.rs  engine_basic.rs  lto.rs  thermal_emission.rs  twostream_backend.rs
rust/sasktran2-sys/: Cargo.toml  build.rs
rust/sasktran2-sys/src/: bindings.rs  ffi.rs  lib.rs
rust/sasktran2-sys/tests/: coulson.rs  engine_basic.rs
(+918 files in other folders)
